# cookiecutter-poetry

./: .coverage  .gitignore  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: ci-tests.yml  python-package.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.package_name}}/: .flake8  .gitlab-ci.yml  LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: python-tests.yaml
{{cookiecutter.package_name}}/docs/: conf.py  index.md  usage.md
{{cookiecutter.package_name}}/src/{{cookiecutter.module_name}}/: __init__.py  __main__.py  app.py  py.typed
{{cookiecutter.package_name}}/tests/{{cookiecutter.module_name}}/: test_sample.py
{{cookiecutter.project_slug}}/: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.github/workflows/: python-publish.yml  python-tests.yaml
{{cookiecutter.project_slug}}/docs/: index.md  usage.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/: __init__.py  __main__.py  app.py  cli.py  logging.py
{{cookiecutter.project_slug}}/test/: conftest.py  test_sample.py
{{cookiecutter.project_slug}}/tests/{{cookiecutter.module_name}}/: conftest.py  test_sample.py
