[tool.poetry]
name = "cookiecutter-poetry"
version = "0.0.1"
description = """
Cookiecutter template for a python project with poetry \
and pytest and other goodies \
"""
authors = ["Tim Hughes <thughes@thegoldfish.org>"]
# Use identifier from https://spdx.org/licenses/
license = "MIT"
readme = "README.md"
homepage = "https://github.com/timhughes/cookiecutter-poetry"
repository = "https://github.com/timhughes/cookiecutter-poetry"
documentation = "https://github.com/timhughes/cookiecutter-poetry/blob/master/README.md"
classifiers = [
    # https://pypi.org/classifiers/
    "Environment :: Console",
    "Development Status :: 1 - Planning",
]
[tool.poetry.urls]
# If you publish you package on PyPI, these will appear in the Project Links section.
"Bug Tracker" = "https://github.com/timhughes/cookiecutter-poetry/issues"

[tool.poetry.dependencies]
python = "^3.11.0"
cookiecutter = "*"
pytest-cookies = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
bandit = "*"
pylint = "*"
bump2version = "*"
vulture = "*"
jedi-language-server = "*"
reorder-python-imports = "*"
pyinstaller = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
# Example
filterwarnings = [
    "ignore::DeprecationWarning:moto.*:",
    "ignore::DeprecationWarning:boto.*:",
]
