[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cookiecutter-poetry"
version = "0.0.1"
description = "Cookiecutter template for python with poetry and pytest"
authors = [
    "Tim Hughes <thughes@thegoldfish.org>",
]
# Use identifier from https://spdx.org/licenses/
license = "MIT"
readme = "README.md"
homepage = "https://github.com/timhughes/cookiecutter-poetry"
repository = "https://github.com/timhughes/cookiecutter-poetry"
documentation = "https://github.com/timhughes/cookiecutter-poetry/blob/master/README.md"
classifiers = [
    # https://pypi.org/classifiers/
    "Environment :: Console",
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
# If you publish you package on PyPI, these will appear in the Project Links section.
"Bug Tracker" = "https://github.com/timhughes/cookiecutter-poetry/issues"

[tool.poetry.dependencies]
python = "^3.11.0"
cookiecutter = "*"


[tool.poetry.group.test.dependencies]
bandit = "*"
black = "*"
bump2version = "*"
flake8 = "*"
isort = "*"
jedi-language-server = "*"
mypy = "*"
pyinstaller = "*"
pylint = "*"
pytest = "*"
pytest-cookies = "*"
pytest-cov = "*"
reorder-python-imports = "*"
vulture = "*"

[tool.pytest.ini_options]
# Example
filterwarnings = [
    "ignore::DeprecationWarning:moto.*:",
    "ignore::DeprecationWarning:boto.*:",
]
