[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.short_description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
# Use identifier from https://spdx.org/licenses/
license = "{{ cookiecutter.license }}"
readme = "README.md"
homepage = "https://github.com/{{ cookiecutter.github_user }}/{{ cookiecutter.package_name }}"
repository = "https://github.com/{{ cookiecutter.github_user }}/{{ cookiecutter.package_name }}"
documentation = "README.md"
classifiers = [
    # https://pypi.org/classifiers/
    {%- if cookiecutter.command_line_interface != "no cli" %}
    "Environment :: Console",
    {%- endif %}
    "Development Status :: 1 - Planning",
]
{%- if cookiecutter.package_name|lower|replace('-', '_') != cookiecutter.module_name %}
packages = [
    { include = "{{ cookiecutter.module_name }}", from = "src" }
]
{%- endif %}

[tool.poetry.urls]
# If you publish you package on PyPI, these will appear in the Project Links section.
"Bug Tracker" = "https://github.com/{{ cookiecutter.github_user }}/{{ cookiecutter.package_name }}/issues"

[tool.poetry.scripts]
{%- if cookiecutter.command_line_interface != "no cli" %}
{{ cookiecutter.package_name }} = "{{ cookiecutter.module_name }}.__main__:cli"
{%- endif %}

[tool.poetry.dependencies]
python = "^3.10.0"
{%- if cookiecutter.command_line_interface == "click" %}
click = "*"
{%- endif %}
{%- if cookiecutter.use_jupyterlab == "y" %}
jupyterlab = "*"
pandas = "*"
jupyterlab_git = "*"
jupyterlab_widgets = "*"
{%- endif %}

[tool.poetry.group.test.dependencies]
bandit = "*"
black = "*"
bump2version = "*"
flake8 = "*"
isort = "*"
jedi-language-server = "*"
mypy = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
reorder-python-imports = "*"
vulture = "*"
typeguard = "*"
pre-commit = "*"
pre-commit-hooks = "*"
pyupgrade = "*"
darglint = "*"
{%- if cookiecutter.command_line_interface != "no cli" %}
pyinstaller = "*"
{%- endif %}

[tool.poetry.group.docs.dependencies]
furo = "*"
myst_parser = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx-click = "*"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py311']
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
select = ["ALL"]
lines-after-imports = 2
[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.bandit]
[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.pytest.ini_options]
# Example
filterwarnings = [
    "ignore::DeprecationWarning:moto.*:",
    "ignore::DeprecationWarning:boto.*:",
]
