[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
# Use identifier from https://spdx.org/licenses/
license = "{{ cookiecutter.license }}"
readme = "README.md"
homepage = "https://github.com/{{ cookiecutter.github_name }}/{{ cookiecutter.project_slug }}"
repository = "https://github.com/{{ cookiecutter.github_name }}/{{ cookiecutter.project_slug }}"
documentation = "https://github.com/{{ cookiecutter.github_name }}/{{ cookiecutter.project_slug }}/blob/master/README.md"
classifiers = [
    # https://pypi.org/classifiers/
    {%- if cookiecutter.command_line_interface != "no cli" %}
    "Environment :: Console",
    {%- endif %}
    "Development Status :: 1 - Planning",
]
[tool.poetry.urls]
# If you publish you package on PyPI, these will appear in the Project Links section.
"Bug Tracker" = "https://github.com/{{ cookiecutter.github_name }}/{{ cookiecutter.project_slug }}/issues"

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.module_name }}.cli:cli"

[tool.poetry.dependencies]
python = "^3.8.0"
{%- if cookiecutter.use_jupyterlab == "y" %}
jupyterlab = "*"
pandas = "*"
jupyterlab_git = "*"
jupyterlab_widgets = "*"
{%- endif %}

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
black = "*"
bandit = "*"
pylint = "*"
bump2version = "*"
vulture = "*"
jedi-language-server = "*"
reorder-python-imports = "*"
{%- if cookiecutter.command_line_interface != "no cli" %}
pyinstaller = "*"
{%- endif %}

[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
# Example
filterwarnings = [
    "ignore::DeprecationWarning:moto.*:",
    "ignore::DeprecationWarning:boto.*:",
]
