[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
# Use identifier from https://spdx.org/licenses/
license = "{{ cookiecutter.license }}"
readme = "README.md"
homepage = "https://github.com/{{ cookiecutter.github_name }}/{{ cookiecutter.project_slug }}"
repository = "https://github.com/{{ cookiecutter.github_name }}/{{ cookiecutter.project_slug }}"
documentation = "https://github.com/{{ cookiecutter.github_name }}/{{ cookiecutter.project_slug }}/blob/master/README.md"
classifiers = [
    # https://pypi.org/classifiers/
    {%- if cookiecutter.command_line_interface != "no cli" %}
    "Environment :: Console",
    {%- endif %}
    "Development Status :: 1 - Planning",
]
{%- if cookiecutter.project_slug|lower|replace('-', '_') != cookiecutter.module_name %}
packages = [
    { include = "{{ cookiecutter.module_name }}", from = "src" }
]
{%- endif %}

[tool.poetry.urls]
# If you publish you package on PyPI, these will appear in the Project Links section.
"Bug Tracker" = "https://github.com/{{ cookiecutter.github_name }}/{{ cookiecutter.project_slug }}/issues"

[tool.poetry.scripts]
{%- if cookiecutter.command_line_interface != "no cli" %}
{{ cookiecutter.project_slug }} = "{{ cookiecutter.module_name }}.__main__:cli"
{%- endif %}

[tool.poetry.dependencies]
python = "^3.10.0"
{%- if cookiecutter.command_line_interface == "click" %}
click = "*"
{%- endif %}
{%- if cookiecutter.use_jupyterlab == "y" %}
jupyterlab = "*"
pandas = "*"
jupyterlab_git = "*"
jupyterlab_widgets = "*"
{%- endif %}

[tool.poetry.group.test.dependencies]
bandit = "*"
black = "*"
bump2version = "*"
flake8 = "*"
isort = "*"
jedi-language-server = "*"
mypy = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
reorder-python-imports = "*"
vulture = "*"
{%- if cookiecutter.command_line_interface != "no cli" %}
pyinstaller = "*"
{%- endif %}

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py311']

[tool.pytest.ini_options]
# Example
filterwarnings = [
    "ignore::DeprecationWarning:moto.*:",
    "ignore::DeprecationWarning:boto.*:",
]
